# api-workshop

./: .gitignore  Procfile  README.md  main.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: main.yml
app/: config.py  data.py  main.py  model.py  routes.py  schema.py
tests/: test_main.py
